--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -32,8 +32,9 @@ main{
     gap: 1em;
     background-color: var(--light);
     flex-wrap: wrap;
-    border: 50px black solid;
-    background-color: #704F2F;
+    border: 50px #161515 solid;
+    box-shadow: inset 0 0 10px;
+    background-color: #b17941;
 }
 
 .git-user{
@@ -51,8 +52,6 @@ main{
     padding: 1em;
     cursor: pointer;
     transition: transform 1s;
-
-   
 }
 
 .div-information{
