--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,4 @@
+@import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css");
 @import url(./botton.css);
 
 * {
@@ -33,8 +34,8 @@ main{
     background-color: var(--light);
     flex-wrap: wrap;
     border: 50px #161515 solid;
-    box-shadow: inset 0 0 10px;
-    background-color: #b17941;
+    box-shadow: inset 0 0 20px;
+    background-color: #c58443;
 }
 
 .git-user{
@@ -55,11 +56,21 @@ main{
 }
 
 .div-information{
-    background-color: var(--dark);
+    background-color: #0000001e;
     padding: 1em;
-    display:flex;
     flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    position: fixed;
+    z-index: 2;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 100%;
     display: none;
+}
+.active {
+    display: flex;
 }
 
 #user-name{
@@ -75,6 +86,17 @@ main{
     gap: 2em;
     background-color: var(--container);
     margin-top: 1em;
+
+    & > a > i {
+        font-size: 3em;
+        color:var(--light);
+        transition: color .5s;
+    }
+
+    & > a:hover > i {
+        color: var(--blue);
+    }
+    
 }
 
 .redes img {
